--- a/discussion/2.graphs/graphs_descriptives_key.Rmd
+++ b/discussion/2.graphs/graphs_descriptives_key.Rmd
@@ -29,7 +29,7 @@ colFmt = function(x,color){
 # Activity: graphs and descriptive statistics in R
 
 You'll use the FEV data in all of the activities today, so first read it in:
-```{r read-data, echo = TRUE}
+```{r read-data, eval = TRUE}
 ## you may have to change the bit that reads "fev.txt" to make sure 
 ## that R can tell where your file is located!
 fev <- read.table(file = "fev.txt", header = TRUE) 
@@ -42,13 +42,13 @@ head(fev)
 
 You have already seen one method for computing simple descriptive statistics: the `summary` function. 
 
-```{r summarize, echo = TRUE}
+```{r summarize, eval = TRUE}
 summary(fev)
 ```
 
 In the key for the first discussion section activity, you saw that `seqnbr` and `subjid` don't have meaningful descriptive statistics, since they are subject identifiers (and hence somewhat arbitrary). You also saw that to make the output from `summary` more informative for the binary variables (`sex`, `smoke`), you can code them as 0's and 1's:
 
-```{r create-new, echo = TRUE}
+```{r create-new, eval = TRUE}
 ## make a variable called "female", and one called "smoker"
 fev$female <- fev$sex - 1
 fev$smoker <- ifelse(fev$smoke == 2, 0, 1)
@@ -56,17 +56,17 @@ fev$smoker <- ifelse(fev$smoke == 2, 0, 1)
 summary(fev)
 ```
 
-However, typically you will report more than just the descriptive statistics from summary: for example, knowing the number of observations for each variable, and the number of missing observations, is often helpful.
+However, typically you will report more than just the descriptive statistics from `summary`: for example, knowing the number of observations for each variable, and the number of missing observations, is often helpful.
 
-The `uwIntroStats` package contains functions that compute descriptive statistics easily. Load that package now.
+The `uwIntroStats` package contains functions that compute descriptive statistics easily. Load that package now. If you haven't installed `uwIntroStats` yet, make sure to run `install.packages("uwIntroStats")` prior to running line 64.
 
-```{r load-uwIntroStats, echo = TRUE}
+```{r load-uwIntroStats, eval = TRUE}
 library("uwIntroStats")
 ```
 
 One of the easiest functions to use is `descrip`. Uncomment the line in the code chunk below that only has a single `#` preceding the code, and run it. Replace the text in italics below with your observations on what information `descrip` gives you that `summary` does not, and whether or not you think this additional information is helpful.
 
-```{r descrip-1, echo = TRUE}
+```{r descrip-1, eval = TRUE}
 descrip(fev)
 ```
 
@@ -74,7 +74,7 @@ descrip(fev)
 
 One of the most powerful features of `descrip` is its ability to compute and easily display `r colFmt("stratified", "blue")` descriptive statistics---here, summary measures are computed within each level of a variable (e.g., `smoker = 0` and `smoker = 1`), and displayed. Add the argument `strata = fev$smoker` to the call to `descrip` in the next code chunk, and report the mean FEV among smokers and nonsmokers. Also, why might you want to stratify by smoking status in these data? (Hint: what is the scientific question?)
 
-```{r descrip-2, echo = TRUE}
+```{r descrip-2, eval = TRUE}
 ## descriptive statistics stratified by smoking status
 ## you have to add the argument strata = fev$smoker!
 descrip(fev)
@@ -88,7 +88,7 @@ You have seen a couple of examples of boxplots already: in the lecture notes for
 
 You first have to create a variable in the FEV data that denotes pre-teens (defined as less than 13 years old) and teens (defined as greater than or equal to 13 years old). The logical expression that creates this variable is given by `fev$age < 13`: if a given value in the `age` variable of the `fev` dataset is less than 13, this logical expression returns `TRUE`, and otherwise it returns `FALSE`. Fill in the next code chunk to create a variable called `teen` in the `fev` data that takes on the value `1` if the study participant is a teen, and takes on the value `0` if the study participant is a pre-teen.
 
-```{r create-teen, echo = TRUE}
+```{r create-teen, eval = TRUE}
 ## create the teen variable here! Hint: use the ifelse() function
 fev$teen <- ifelse(fev$age < 13, 0, 1)
 ```
@@ -104,7 +104,7 @@ Now that you have a variable that differentiates teens from pre-teens, you can r
 
 Copy the code for the boxplot into the next code chunk, and run it to create the boxplot. What is this boxplot telling us about the data? What do the solid black line, box, and "whiskers" (the dashed lines) mean?
 
-```{r boxplot-1, echo = TRUE}
+```{r boxplot-1, eval = TRUE}
 ## make a boxplot of FEV versus age, categorized into pre-teen and teen
 boxplot(fev$fev ~ fev$teen, xlab = "Age Group", ylab = "FEV (liters per second)", names = c("Pre-teen (< 13)", "Teen (13 +)"))
 ```
@@ -115,11 +115,11 @@ boxplot(fev$fev ~ fev$teen, xlab = "Age Group", ylab = "FEV (liters per second)"
 
 What would happen if we forgot some of these options? Uncomment the code in the next code chunk and run that line. Replace the text in italics below with your observations on what changed between this plot and the previous one: specifically, which plot is more informative, and why?
 
-```{r boxplot-2, echo = TRUE}
+```{r boxplot-2, eval = TRUE}
 boxplot(fev$fev ~ fev$teen)
 ```
 
-*Replace this sentence with your answers to the questions above.*
+*I think that the first plot is more informative---the axis labels help me understand which variables I'm looking at. Always remember to label your axes!*
 
 One way to improve upon this boxplot (there are many!) is to add the underlying data points. This gives an additional layer of information about the spread and center of the data for each group. 
 
@@ -129,63 +129,66 @@ You'll proceed in three stages to add data to the boxplot:
 2. Using the `boxplot` function (with new options!) add the boxplots to the empty plot
 3. Using the `points` function, add data points for both pre-teens and teens
 
-First, focus on plotting the `fev` values for pre-teens (uncomment the line of code, which only has a single `#` in front of it, and run it):
+First, focus on plotting the `fev` values for pre-teens (change the code chunk option from `eval = FALSE` to `eval = TRUE`):
 
-```{r boxplot-3, echo = TRUE}
+```{r boxplot-3, eval = TRUE}
 ## plot the fev values for pre-teens only
-# plot(fev$teen[fev$teen == 0], fev$fev[fev$teen == 0], xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
+plot(fev$teen[fev$teen == 0], fev$fev[fev$teen == 0], xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
 
 ```
 
 What do you notice about this plot? Is it informative? What does the code `fev$fev[fev$teen == 0]` do? What does the code `fev$teen[fev$teen == 0]` do? (Hint: `==` means "compare the left- and right-hand sides and check if they are equal")
 
-*Replace this sentence with your answers to the questions above.*
+*In this plot, we're focusing only on those kids who are pre-teens (age <= 13), since `fev$teen == 0` returns `TRUE` only if the kid is a pre-teen; otherwise, it returns `FALSE`. We only have a single line, at zero, because that's the only data we are using on the $x$-axis. This makes it hard to tell how much data there are, because the points are all clumped together! We add random noise to the `teen` values in the next code chunk so that we can get a better sense of how much data there are in each category.*
 
-Correct one of the issues that you should have identified, by adding some random noise to the `fev$teen` values, so that there is some visual separation between the points (this is also called `r colFmt("jittering", "blue")`). Uncomment the next code chunk (only those lines with single `#` characters at the beginning) and run it; do you think that this has improved the visual layout of the plot? Can you gain a bit more information now than you had before?
+Correct one of the issues that you should have identified, by adding some random noise to the `fev$teen` values, so that there is some visual separation between the points (this is also called `r colFmt("jittering", "blue")`). Change the code chunk option for the next chunk to `eval = TRUE` and run it; do you think that this has improved the visual layout of the plot? Can you gain a bit more information now than you had before?
 
-```{r boxplot-4, echo = TRUE}
+```{r boxplot-4, eval = TRUE}
 ## set a random number seed (so that your results are reproducible; can be any number)
-# set.seed(1234)
+set.seed(1234)
 ## add some random noise (from a uniform distribution) to the values
-# pre_teen_noisy <- fev$teen[fev$teen == 0] + runif(length(fev$teen[fev$teen == 0]), -0.05, 0.05)
+pre_teen_noisy <- fev$teen[fev$teen == 0] + runif(length(fev$teen[fev$teen == 0]), -0.05, 0.05)
 ## plot the fev values for pre-teens only
-# plot(pre_teen_noisy, fev$fev[fev$teen == 0], xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
+plot(pre_teen_noisy, fev$fev[fev$teen == 0], xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
 
 ```
-*Replace this sentence with your answers to the questions above.*
 
-Now create an empty plot, using similar code to before, and add the boxplots on top (uncomment and run this code, similar to before):
+*I think so! Now it is a bit clearer that there are a lot of data in the low- to mid-range FEV levels, for pre-teens. It was hard to tell this from the plot before, without jittering. We could increase the amount of random noise (by changing the arguments to `runif` on line 150) to further increase the separation between points.*
 
-```{r boxplot-5, echo = TRUE}
+Now create an empty plot, using similar code to before, and add the boxplots on top (again, change to `eval = TRUE`):
+
+```{r boxplot-5, eval = TRUE}
 ## create any empty plot (type = "n"), but give it x- and y-axis limits, and labels
-# plot(1, type = "n", xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
+plot(1, type = "n", xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
 ## add the boxplots (set add to TRUE, but other things to FALSE since we are adding)
-# boxplot(fev$fev ~ fev$teen, xlab = "", ylab = "", add = TRUE, at = c(0, 1), axes = FALSE, outline = FALSE)
+boxplot(fev$fev ~ fev$teen, xlab = "", ylab = "", add = TRUE, at = c(0, 1), axes = FALSE, outline = FALSE)
 ```
 
-Finally, uncomment (similar to before) and run the next code chunk. In words, what is each line of code doing?
+Finally, run the next code chunk (after changing `eval` to `TRUE`). Comment on this plot: what do the data tell you about the relationship between FEV and age? Would you change anything about this plot (including changing the type of plot altogether) to better tell this story?
 
-```{r boxplot-6, echo = TRUE}
+```{r boxplot-6, eval = TRUE}
 ## create any empty plot (type = "n"), but give it x- and y-axis limits, and labels
-# plot(1, type = "n", xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
+plot(1, type = "n", xlim = c(-1, 2), ylim = c(0, 6), ylab = "FEV (liters per second)", xlab = "Age Group", axes = FALSE, pch = 16)
 ## add the boxplots (set add to TRUE, but other things to FALSE since we are adding)
-# boxplot(fev$fev ~ fev$teen, xlab = "", ylab = "", add = TRUE, at = c(0, 1), axes = FALSE, outline = FALSE)
+boxplot(fev$fev ~ fev$teen, xlab = "", ylab = "", add = TRUE, at = c(0, 1), axes = FALSE, outline = FALSE)
 ## create jittered data for pre-teens and teens
-# set.seed(1234)
-# pre_teen_noisy <- fev$teen[fev$teen == 0] + runif(length(fev$teen[fev$teen == 0]), -0.05, 0.05)
-# teen_noisy <- fev$teen[fev$teen == 1] + runif(length(fev$teen[fev$teen == 1]), -0.05, 0.05)
+set.seed(1234)
+pre_teen_noisy <- fev$teen[fev$teen == 0] + runif(length(fev$teen[fev$teen == 0]), -0.05, 0.05)
+teen_noisy <- fev$teen[fev$teen == 1] + runif(length(fev$teen[fev$teen == 1]), -0.05, 0.05)
 ## add the data points
-# points(pre_teen_noisy, fev$fev[fev$teen == 0], pch = 16)
-# points(teen_noisy, fev$fev[fev$teen == 1], pch = 16)
+points(pre_teen_noisy, fev$fev[fev$teen == 0], pch = 16)
+points(teen_noisy, fev$fev[fev$teen == 1], pch = 16)
 ## add x-axis and labels
-# axis(side = 1, at = c(0, 1), labels = c("Pre-teen (< 13)", "Teen (13 +)"))
+axis(side = 1, at = c(0, 1), labels = c("Pre-teen (< 13)", "Teen (13 +)"))
 ## add y-axis
-# axis(side = 2, at = seq(0, 6, by = 1))
+axis(side = 2, at = seq(0, 6, by = 1))
 ## add a box around everything
-# box()
+box()
 ```
 
-*Replace this sentence with your answers to the questions above.*
+*The boxplots show that FEV tends to be higher in teens than in pre-teens. We might expect to see this relationship---as you grow, your lungs get larger, and thus the volume of air that you can hold increases. Since FEV measures the volume of air that you can expel in a fixed amount of time, if you can hold more air in your lungs, you can likely expel more.*
+
+*These boxplots are a decent way of telling this story, but I would argue that a scatterplot would display the data more effectively. There, we do not have to dichotomize age into teen and pre-teen; this allows us to show how FEV increases as age increases on a continuous scale.*
 
 ## 3. Stratified scatterplots
 
@@ -193,22 +196,30 @@ On slide 0.32, you saw a scatterplot of FEV versus age. Here, you'll improve upo
 
 First, why might you want to show smokers and nonsmokers in two different colors? What are the pros and cons of displaying all of the information in a single graph, rather than in two graphs (one for smokers, and one for nonsmokers)? 
 
-*Replace this sentence with your answer to these questions.*
+*My choice depends on what I want my reader to gain from looking at the plot. If I want to convey that FEV increases with increasing age, then I can leave the plot as-is. However, if my ultimate goal is to compare the FEV of smokers and nonsmokers (which it is, in this study), then I want to create a plot that helps to understand this difference, if it exists.*
+
+*Color is an effective way of differentiating between two groups on a plot---our eyes are easily drawn to different colors (especially if there are only a few different colors on the plot). If you want to make sure that your readers will be able to differentiate between the groups even if they print in black and white, then make the points different shapes (as I've done below, using the argument `pch`).*
+
+*The easiest thing that we could do is create two separate scatterplots, one for each group (smokers and nonsmokers). However, it is a bit hard for our eyes to compare information in two different plot windows, so to make it easy for your reader to compare groups, always try to include the information in a single plot. I can't think of any drawbacks to doing this, in the current example. The only time I might split up the information into multiple plots is if I think that the single plot has too much going on. Remember that at the end of the day, your plots should tell a convincing story to your reader. Think hard about what you want your reader to take away!*
 
 To color the points for smokers and nonsmokers differently, you'll use some of the tools you learned in the previous exercise by: (1) plotting the FEV values for all ages, among nonsmokers, and coloring the points blue; and (2) adding the points corresponding to the FEV values for all ages, among smokers, and coloring the points red. The next code chunk does the first part for you---your task is to add the points corresponding to smokers.
 
-```{r scatter-1, echo = TRUE}
+```{r scatter-1, eval = TRUE}
 ## plot FEV values for all ages, among nonsmokers
 plot(fev$age[fev$smoker == 0], fev$fev[fev$smoker == 0], xlab = "Age (years)", ylab = "FEV (liters per second)", main = "FEV versus age, stratified by smoking status", pch = 16, col = "blue")
 ## add in code to add the points for smokers, colored red (Hint: use the points() function)
+# note that using "subsest" is equivalent to using the brackets as I did above
+points(subset(fev$age, fev$smoker == 1), subset(fev$fev, fev$smoker == 1), col = "red", pch = 18)
 
 ## add a legend
-legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = 16)
+legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = c(18, 16))
 ```
 
 Based on this plot, describe the trends in FEV with age for smokers and nonsmokers, separately. Additionally, describe the difference in the trends in FEV with age between smokers and nonsmokers.
 
-*Replace this sentence with your description.*
+*FEV tends to increase with age, for nonsmokers. When we restrict our attention to smokers, it seems that FEV either remains constant with age or perhaps decreases with age.*
+
+*There is a striking difference in the relationship between FEV and age between smokers and nonsmokers, where in smokers, FEV appears to decrease with increasing age, while the opposite is true in nonsmokers.*
 
 ## 4. Trend lines
 
@@ -216,26 +227,35 @@ In the previous section, you plotted FEV versus age and stratified by smoking st
 
 It is a bit difficult to describe these trends based on the data alone. `r colFmt("Trend lines", "blue")` (e.g., lines of best fit) can help to visualize these trends. Today, you'll fit a particular type of trend line, called a `r colFmt("loess smooth", "blue")`.
 
-To understand loess smooths, first you have to understand best fitting lines. Best fitting lines minimize the squared difference between each data point and the line: the idea is that the best fitting line should not be too far away from any of the data points.
+To understand loess smooths, first you have to understand best fitting lines. Best fitting lines minimize the squared difference between each data point and the line: the idea is that the best fitting line should not be too far away from any of the data points. If you draw a vertical line from each data point to the line, and square it (this makes sure that being above and below the line don't cancel each other out), you have a measure of the distance between the line and each data point. Making this difference small means that the line describes the data fairly well.
 
 Loess smooths break up the $x$-axis of the data into small chunks, and fit a best fitting line within each chunk. The best fitting lines are then connected together. These smooths are thus a bit more flexible than just fitting a straight line to the data---they can help determine if there are more complex patterns going on.
 
 I have reproduced the scatter plot from before, and added a loess smooth for the nonsmokers. Copy your code that adds the points for smokers into the next code chunk, and add code to make a loess smooth for smokers. Make sure to color the line for smokers red!
 
-```{r scatter-2, echo = TRUE}
+```{r scatter-2, eval = TRUE}
 ## plot FEV values for all ages, among nonsmokers
 plot(fev$age[fev$smoker == 0], fev$fev[fev$smoker == 0], xlab = "Age (years)", ylab = "FEV (liters per second)", main = "FEV versus age, stratified by smoking status", pch = 16, col = "blue")
 ## add a loess smooth
 nonsmoker_loess <- lowess(fev$age[fev$smoker == 0], fev$fev[fev$smoker == 0])
 lines(nonsmoker_loess, col = "blue", lty = 2)
 ## add in code to add the points for smokers, colored red (Hint: use the points() function)
-
+# note that using "subsest" is equivalent to using the brackets as I did above
+points(subset(fev$age, fev$smoker == 1), subset(fev$fev, fev$smoker == 1), col = "red", pch = 18)
 ## add in code to add the loess smooth for smokers, colored red
+smoker_loess <- lowess(subset(fev$age, fev$smoker == 1), subset(fev$fev, fev$smoker == 1))
+lines(smoker_loess, col = "red", lty = 2)
 
 ## add a legend
-legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = 16)
+legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = c(18, 16))
 ```
 
 Based on this plot, describe the trends in FEV with age for smokers and nonsmokers, separately. Additionally, describe the difference in the trends in FEV with age between smokers and nonsmokers. How do the loess smooths make answering these questions easier? 
 
-*Replace this sentence with your description, and the answer to the final question.*
+*FEV tends to increase with age, for nonsmokers. When we restrict our attention to smokers, it seems that FEV still increases with age, but the increase in FEV is much smaller.*
+
+*There appears to be a different relationship between FEV and age for smokers and nonsmokers. For nonsmokers, FEV appears to increase dramatically with age. For smokers, this increase seems to be a much smaller magnitude.*
+
+*The loess smooths made answering these questions much easier for me. Looking at the slopes of the trend lines (i.e., how quickly are things changing) alerted me to the fact that FEV isn't actually decreasing with age in smokers. This is an interesting finding, and one that we'll explore more!*
+
+*We've seen before that our brains can only comprehend so much information. By adding trend lines to this scatterplot, you make the story easier for your reader to understand. Always try to make it as easy as possible for your reader to reach the conclusion you want them to reach!*
