remove example num from slides

--- a/discussion/2.graphs/graphs.tex
+++ b/discussion/2.graphs/graphs.tex
@@ -329,7 +329,7 @@ Components of good graphics:
 
 
 \begin{frame}
-\frametitle{Tables: example 1}
+\frametitle{Tables: example }
 \includegraphics[width=1\textwidth]{{figs/tables_1}.png}
 \end{frame}
 
